--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
   padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+a{
+  text-decoration: none;
+  color: white;
+}
