--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,13 +5,17 @@
   .home-card-container{
     display: flex;
     flex-direction: column;
-    margin-bottom: 300px;
   }
+  
   
   .home-card-title{
-    margin: 0 0 10px 40px;
+    margin: 10px 0 20px 20px;
   }
-  
+  .home-card-title:first-child{
+    margin-top: 40px;
+  }
+
+
   .map-card-area{
     display: flex;
     justify-content: space-evenly;
