--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,6 +6,7 @@
     cursor: pointer;
     background-color: white;
     margin-bottom: 0;
+    padding-bottom: 30px;
 }
 
 .card:hover{
@@ -33,7 +34,6 @@
     text-align: center;
     font-weight: 800;
     font-size: 17px;
-    margin-top: 10px;
 }
 
 .card-vote{
@@ -61,4 +61,11 @@
 
 .release-date{
     text-align: center;
+}
+
+.card-title-date{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 10px;
 }
