--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,7 @@
 .navbar{
     background-color: black;
     padding: 10px;
-    border-bottom: 3px solid #070707;;
-    font-weight: 600;
-    letter-spacing: 1px;
+    border-bottom: 3px solid #0e0e0e;
 }
 
 .navbar-container{
@@ -16,8 +14,9 @@
 
 .navbar-logo-area{
     font-size: 40px;
-    color: #DAA520;
+    color: #eeab00;
     letter-spacing: 2px;
+    font-weight: 600;
 }
 
 .navbar-search-area{
@@ -37,4 +36,32 @@
     border-radius: 5px;
     cursor: pointer;
     border: none;
+    background-color: white;
+}
+.navbar-search-area button:hover{
+    background-color: #ffb700;
+    transition: 0.5s;
+}
+
+
+@media screen and (max-width: 480px){
+    .navbar{
+        padding: 20px 0;
+    }
+    .navbar-container{
+        flex-direction: column;
+        gap: 15px;
+    }
+    .navbar-logo-area{
+        font-size: 44px;
+        letter-spacing: 3px;
+    }
+    .navbar-search-area{
+        width: 100%;
+        justify-content: center;
+    }
+    .navbar-search-area input, .navbar-search-area button{
+        font-size: 16px;
+    }
+
 }
