--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+  font-family: 'Inter', sans-serif;
 }
 
 a{
