--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,3 @@
-  .home{
-  }
-  
   .home-description{
     border-bottom: 3px solid #161616;
     padding: 140px;
@@ -8,6 +5,7 @@
     background-image: url("https://cdn.pixabay.com/photo/2018/11/30/18/30/camera-3848320_1280.jpg");
     background-position: center;
     background-size: cover;
+    text-shadow: 3px 3px 2px #000000;
   }
   .home-description h1{
     margin: 0px 0px 10px 20px;
@@ -23,14 +21,13 @@
     flex-direction: column;
   }
   
-  
   .home-card-title{
     margin: 10px 0 20px 20px;
+    text-shadow: 2px 1px 1px #666666;
   }
   .home-card-title:first-child{
     margin-top: 40px;
   }
-
 
   .map-card-area{
     display: flex;
@@ -39,3 +36,35 @@
     margin-bottom: 60px;
     gap: 30px 0;
   }
+
+
+  @media screen and (max-width: 768px){
+    .home-description{
+      padding: 90px 15px;
+    }
+  }
+
+  @media screen and (max-width: 480px){
+    .home{
+      width: 100%;
+      overflow-x: hidden;
+    }
+    .home-description{
+      border-bottom: 2px solid #161616;
+      padding: 60px 15px;
+      width: 100%;
+      color: white;
+      /* background-position: center;
+      background-size: cover; */
+    }
+    .home-description h1{
+      margin: 0;
+      font-size: 40px;
+    }
+    .home-description h2{
+      margin: 10px 0px 0px 0px;
+      font-size: 24px;
+      width: 95%;
+    }
+}
+  
